fixed  block sides fade in collapsed projecy info

--- a/containers/CompanyPage/styles.scss
+++ b/containers/CompanyPage/styles.scss
@@ -281,8 +281,8 @@
       position: absolute;
       top: 0;
       bottom: 0;
-      right: 0;
-      left: 0;
+      right: -60px;
+      left: -60px;
       box-shadow: inset 0 130px 90px #fff;
       //box-shadow: inset 0 150px 150px #fff;
 
